updated some ui colors, coarse asctions and border

--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,6 @@
     <link rel="stylesheet" href="./footer.css">
 
     <style>
-        /* General Page Styling */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
         body {
             display: flex;
             justify-content: center;
@@ -215,6 +207,17 @@
 
             .follow-me-section {
                 padding: 0;
+            }
+
+            body {
+                padding: 0;
+                margin: 0;
+            }
+
+            .contact-page {
+                margin-top: 2rem;
+                padding-top: 2rem;
+                background-color: transparent;
             }
         }
     </style>
