--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 
     <div class="code-link">
         <img src="./images/animated/software.gif" alt="Source code" class="description-image">
-        <p>Source code available here <a href="https://github.com/arundada9000/Unit-Converter">Code</a></p>
+        <p>Source code available <a href="https://github.com/arundada9000/Unit-Converter">Here</a></p>
     </div>
     <footer>
         <div class="footer-container">
